--- a/app/src/main/res/layout/set_sys_frag.xml
+++ b/app/src/main/res/layout/set_sys_frag.xml
@@ -17,6 +17,7 @@
     </ScrollView>
 
     <Button
+        android:id="@+id/btn_logout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
