--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,12 +11,17 @@
     <color name="main_color_blue">#3AB4F1</color>
     <color name="main_color_green">#4ED625</color>
 
+    <color name="fab_bg">#FAA24B</color>
+    <color name="fab_bg_focused">#EE9A00</color>
+
     <color name="edittext_color">#666666</color>
     <color name="divider_d3">#D3D3D3</color>
     <color name="divider_e8">#E8E8E8</color>
     <color name="gray">#808080</color><!--灰色 -->
+    <color name="gray_cc">#CCCCCC</color>
     <color name="gray_28">#282828</color>
     <color name="gray_66">#666666</color>
+    <color name="gray_99">#999999</color>
     <color name="gray_b2">#B2B2B2</color>
     <color name="gray_ee">#EEEEEE</color>
     <color name="gray_f6">#F6F6F6</color>
