--- a/app/src/main/res/layout/header_homelist.xml
+++ b/app/src/main/res/layout/header_homelist.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:paddingBottom="4dp">
     <!--<android.support.v4.view.ViewPager-->
     <com.ihaozuo.plamexam.common.AutoViewPager
 
@@ -73,10 +74,12 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1" />
 
+
             <ImageView
                 android:layout_width="48dp"
                 android:layout_height="48dp"
                 android:src="@drawable/ic_consult_home" />
+
 
             <TextView
                 android:layout_width="wrap_content"
