--- a/app/src/main/res/drawable/bg_blue_corner_shape.xml
+++ b/app/src/main/res/drawable/bg_blue_corner_shape.xml
@@ -8,8 +8,8 @@
     <solid android:color="@color/main_color_blue" /><!-- 填充的颜色 -->
 
     <!--&lt;!&ndash; 描边 &ndash;&gt;-->
-    <stroke
-        android:width="@dimen/divider"
-        android:color="@color/gray_f2" />
+    <!--<stroke-->
+        <!--android:width="@dimen/divider"-->
+        <!--android:color="@color/gray_f2" />-->
 
 </shape>
