--- a/app/src/main/res/layout/actionbar_mine.xml
+++ b/app/src/main/res/layout/actionbar_mine.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/actionbar"
     android:layout_width="match_parent"
-    android:layout_height="216dp"
-    android:background="@color/main_color_blue">
+    android:layout_height="@dimen/actionbar_high_mine"
+    android:background="@drawable/bg_mine">
 
     <LinearLayout
+        android:id="@+id/layoutUser"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
@@ -16,21 +16,19 @@
 
         <com.facebook.drawee.view.SimpleDraweeView xmlns:fresco="http://schemas.android.com/apk/res-auto"
             android:id="@+id/img_user"
-            android:layout_width="96dp"
-            android:layout_height="96dp"
+            android:layout_width="107dp"
+            android:layout_height="107dp"
             android:src="@drawable/icon_user_default"
-            fresco:failureImageScaleType="fitXY"
-            fresco:placeholderImage="@drawable/icon_user_default"
-            fresco:roundAsCircle="true"
-            fresco:roundingBorderColor="@color/white"
-            fresco:roundingBorderWidth="2dp" />
+            fresco:placeholderImage="@drawable/ic_mine_user_default"
+            fresco:placeholderImageScaleType="fitXY"
+            fresco:roundAsCircle="true" />
 
 
         <TextView
             android:id="@+id/tvUserName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="15dp"
             android:textColor="@color/white"
             android:textSize="20sp"
             tools:text="艾欧尼亚" />
