--- a/app/src/main/res/layout/next_mine_right_lauout.xml
+++ b/app/src/main/res/layout/next_mine_right_lauout.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="match_parent"
-    android:padding="@dimen/mine_img_rightpadding"
+    android:layout_width="8dp"
+    android:layout_height="14dp"
+    android:layout_marginRight="@dimen/padding_12dp"
     android:src="@drawable/ic_next_gray" />
