--- a/app/src/main/res/layout/next_set_right_layout.xml
+++ b/app/src/main/res/layout/next_set_right_layout.xml
@@ -2,8 +2,8 @@
 <merge xmlns:android="http://schemas.android.com/apk/res/android">
 
     <ImageView
-        android:layout_width="@dimen/img_width_set_right"
-        android:layout_height="@dimen/img_width_set_right"
+        android:layout_width="8dp"
+        android:layout_height="14dp"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
         android:src="@drawable/ic_next_gray" />
