--- a/app/src/main/res/layout/login_frag.xml
+++ b/app/src/main/res/layout/login_frag.xml
@@ -64,18 +64,19 @@
     </LinearLayout>
 
 
-    <View
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:layout_weight="1" />
+    <!--<View-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="0dp"-->
+         <!--android:layout_weight="1"/>-->
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="0dp"
+        android:layout_weight="1">
 
         <ImageView
             android:layout_width="match_parent"
-            android:layout_height="93dp"
+            android:layout_height="match_parent"
             android:layout_alignParentBottom="true"
             android:layout_gravity="bottom"
             android:scaleType="fitXY"
@@ -84,7 +85,8 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="100dp"
-            android:layout_alignParentBottom="true">
+            android:layout_gravity="bottom"
+            android:visibility="gone">
 
             <TextView
                 android:id="@+id/tv_thirdpart_login"
@@ -114,7 +116,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center_vertical"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                >
 
                 <ImageView
                     android:layout_width="0dp"
