--- a/app/src/main/res/drawable-hdpi/editview_bg_focused.xml
+++ b/app/src/main/res/drawable-hdpi/editview_bg_focused.xml
@@ -4,5 +4,5 @@
     <corners android:radius="@dimen/corner_radius2"/>
     <stroke
         android:width="1dip"
-        android:color="#728ea3" />
+        android:color="@color/gray_66" />
 </shape>
