--- a/app/src/main/res/drawable-hdpi/editview_bg_unfocused.xml
+++ b/app/src/main/res/drawable-hdpi/editview_bg_unfocused.xml
@@ -4,5 +4,5 @@
     <corners android:radius="@dimen/corner_radius2"/>
     <stroke
         android:width="1dip"
-        android:color="#BDC7D8" />
+        android:color="@color/gray_f2" />
 </shape>
