--- a/app/src/main/res/layout/item_newslist.xml
+++ b/app/src/main/res/layout/item_newslist.xml
@@ -2,7 +2,8 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="98dp"
+    xmlns:fresco="http://schemas.android.com/apk/res-auto"
     app:cardCornerRadius="@dimen/card_margin"
     app:cardUseCompatPadding="true">
     <!--app:cardCornerRadius="4dp"-->
@@ -16,41 +17,52 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/item_press_white_gray"
-        android:paddingBottom="@dimen/padding_10dp"
-        android:paddingLeft="@dimen/padding_15dp"
-        android:paddingRight="@dimen/padding_8dp"
-        android:paddingTop="@dimen/padding_10dp">
+        android:padding="@dimen/padding_10dp"
+        >
 
-        <ImageView
+        <com.facebook.drawee.view.SimpleDraweeView
             android:id="@+id/img_newslist"
-
-            android:layout_width="90dp"
+            android:layout_width="100dp"
             android:layout_height="68dp"
             android:layout_marginRight="@dimen/padding_10dp"
             android:scaleType="centerCrop"
-            android:src="@mipmap/ic_logo" />
+            fresco:placeholderImage="@drawable/banner"
+            fresco:placeholderImageScaleType="fitXY" />
 
         <TextView
-            android:id="@+id/tvTitle"
+            android:id="@+id/tv_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_toRightOf="@+id/img_newslist"
-            android:maxLines="1"
-            android:text="艾欧尼亚艾欧尼亚艾欧尼亚艾欧尼亚"
-            android:textColor="@color/gray_33"
-            android:textSize="@dimen/textsize_h2" />
-
-        <TextView
-            android:id="@+id/tvSubtitle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/tvTitle"
-            android:layout_marginTop="@dimen/padding_10dp"
             android:layout_toRightOf="@+id/img_newslist"
             android:maxLines="2"
-            android:text="艾欧尼亚艾欧尼亚艾艾欧尼亚艾欧尼亚艾欧尼亚艾欧尼亚欧尼亚艾欧尼亚"
+            android:layout_marginTop="4dp"
+            android:lineSpacingExtra="2dp"
+            android:text="艾欧尼亚艾欧尼亚艾欧尼亚艾欧尼欧尼亚艾欧尼亚"
+            android:textColor="@color/gray_66"
+            android:textSize="@dimen/textsize_h3_16sp" />
+
+        <TextView
+            android:id="@+id/tv_commiton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@+id/img_newslist"
+            android:layout_alignParentBottom="true"
+            android:maxLines="1"
+            android:text="2016-08-03"
             android:textColor="@color/gray_99"
-            android:textSize="@dimen/textsize_h4" />
+            android:textSize="@dimen/textsize_h5_12sp" />
+
+        <TextView
+            android:id="@+id/btn_share"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"
+            android:paddingTop="@dimen/padding_10dp"
+            android:drawablePadding="@dimen/padding_10dp"
+            android:text="分享"
+            android:textColor="@color/gray_99"
+            android:drawableLeft="@drawable/btn_share"/>
 
     </RelativeLayout>
 
