--- a/app/src/main/res/layout/advice_frag.xml
+++ b/app/src/main/res/layout/advice_frag.xml
@@ -20,7 +20,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="216dp"
                 android:layout_margin="12dp"
-                android:background="@drawable/bg_white_corner_shape"
+                android:background="@drawable/bg_white_corner_selector"
                 android:gravity="left|top"
                 android:hint="@string/hint_advice"
                 android:padding="12dp"
@@ -106,7 +106,8 @@
                 android:layout_marginTop="12dp"
                 android:text="提交"
                 android:textColor="@color/white"
-                android:textSize="18sp" />
+                android:textSize="18sp"
+                android:background="@drawable/btn_bg_selector"/>
         </LinearLayout>
     </ScrollView>
 
