--- a/app/src/main/res/layout/consult_loading_frag.xml
+++ b/app/src/main/res/layout/consult_loading_frag.xml
@@ -5,26 +5,49 @@
 
     <include layout="@layout/actionbar" />
 
-    <View
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
-        android:visibility="invisible"/>
+        android:layout_weight="1">
 
 
-    <ImageView
-        android:id="@+id/btn_consult_loading"
-        android:layout_width="@dimen/consult_loading_height"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:src="@drawable/btn_consult_loading"
-        android:layout_gravity="center"/>
+        <com.ihaozuo.plamexam.common.WaveView
+            android:id="@+id/waveView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:visibility="invisible"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:visibility="invisible"/>
+
+
+            <ImageView
+                android:id="@+id/btn_consult_loading"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:src="@drawable/btn_consult_loading"
+                android:visibility="visible"/>
+
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:visibility="invisible"/>
+
+        </LinearLayout>
+
+
+    </FrameLayout>
+
 
     <TextView
         android:layout_width="match_parent"
