--- a/app/src/main/res/layout/header_homelist.xml
+++ b/app/src/main/res/layout/header_homelist.xml
@@ -4,16 +4,21 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:paddingBottom="4dp">
-    <!--<android.support.v4.view.ViewPager-->
-    <com.ihaozuo.plamexam.common.AutoViewPager
-        android:id="@+id/BannerPager"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-
-    <!--<com.ihaozuo.plamexam.common.Banner.XBanner-->
+    <!--<com.ihaozuo.plamexam.common.AutoViewPager-->
         <!--android:id="@+id/BannerPager"-->
         <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"/>-->
+        <!--android:layout_height="wrap_content" />-->
+
+    <com.ihaozuo.plamexam.common.Banner.XBanner
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/BannerPager"
+        android:layout_width="match_parent"
+        android:layout_height="240dp"
+        android:padding="@dimen/padding_10dp"
+        app:pointsPosition="CENTER"
+        app:AutoPlayTime="3000"
+        app:pointNormal="@drawable/shape_noraml"
+        app:pointSelect="@drawable/shape_selected"/>
 
     <!--<include layout="@layout/divider_9dp" />-->
 
