--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -25,4 +25,28 @@
         <attr name="insetBottom" format="dimension|reference" />
     </declare-styleable>
 
+    <declare-styleable name="XBanner">
+        <attr name="isAutoPlay" format="boolean" />
+        <attr name="AutoPlayTime" format="integer|reference"/>
+        <attr name="pointNormal" format="color|reference"/>
+        <attr name="pointSelect" format="color|reference"/>
+        <attr name="pointsVisibility" format="boolean"/>
+        <attr name="pointsPosition" format="enum">
+            <enum name="LEFT" value="0"/>
+            <enum name="CENTER" value="1"/>
+            <enum name="RIGHT" value="2"/>
+        </attr>
+        <attr name="pointsContainerBackground" format="reference|color"/>
+        <attr name="pointContainerPosition" format="enum">
+            <enum name="TOP" value="10" />
+            <enum name="BOTTOM" value="12" />
+        </attr>
+        <!-- 指示点容器左右内间距 -->
+        <attr name="pointContainerLeftRightPadding" format="dimension" />
+        <!-- 指示点上下内间距 -->
+        <attr name="pointTopBottomPadding" format="dimension" />
+        <!-- 指示点左右内间距 -->
+        <attr name="pointLeftRightPadding" format="dimension" />
+    </declare-styleable>
+
 </resources>
